nexus/cognitron/nexus-meta-api-envoy.yaml
---
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 9901
static_resources:
  clusters:
    - connect_timeout: 5s
      http2_protocol_options: {}
      lb_policy: round_robin
      load_assignment:
        cluster_name: cluster_0
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: nexus-meta-api
                      port_value: 9090
      name: meta_api_service
      type: logical_dns
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 8080
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: auto
                http_filters:
                  - name: envoy.filters.http.grpc_web
                  - name: envoy.filters.http.cors
                  - name: envoy.filters.http.router
                route_config:
                  name: local_route
                  virtual_hosts:
                    - cors:
                        allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,request-id,x-accept-content-transfer-encoding,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout
                        allow_methods: GET, PUT, DELETE, POST, OPTIONS
                        allow_origin_string_match:
                          - prefix: "*"
                        expose_headers: request-id,grpc-status,grpc-message
                        max_age: "1728000"
                      domains: ["*"]
                      name: local_service
                      routes:
                        - match: { prefix: "/" }
                          route:
                            cluster: meta_api_service
                            idle_timeout: 0s
                            max_stream_duration:
                              grpc_timeout_header_max: 0s
                stat_prefix: ingress_http
      name: listener_0
